# composable_bags

./: README.md
rosbag_ws/src/bag_reading_cpp/: CMakeLists.txt  package.xml
rosbag_ws/src/bag_reading_cpp/launch/: composable_bag.launch.py
rosbag_ws/src/bag_reading_cpp/src/: bag_reader.cpp  bag_spoofed_reader.cpp
rosbag_ws/src/blackandgold_msgs/: CMakeLists.txt
rosbag_ws/src/blackandgold_msgs/msg/: BasestationCommand.msg
rosbag_ws/src/cloud_transform/: CMakeLists.txt  package.xml
rosbag_ws/src/cloud_transform/config/: lidar_fusion.param.yaml  params.yaml  test.param.yaml  transformer_alt.param.yaml
rosbag_ws/src/cloud_transform/src/: cloud_transform.cpp  transformer_alt.cpp
rosbag_ws/src/cloud_transform/src/old_implementations/: cloud_transform.cpp
rosbag_ws/src/lidar_components/bag_reading_cpp/: CMakeLists.txt
rosbag_ws/src/lidar_components/bag_reading_cpp/launch/: composable_bag.launch.py  example_composition.launch.py  test_bag_replay.launch.py
rosbag_ws/src/lidar_components/bag_reading_cpp/params/: bag_reading_config.yaml
rosbag_ws/src/lidar_components/bag_reading_cpp/src/: bag_luminars.cpp  bag_reader.cpp  bag_spoofed_reader.cpp
rosbag_ws/src/lidar_components/cloud_transform/: CMakeLists.txt
rosbag_ws/src/lidar_components/cloud_transform/config/: alt_cloud_transform.params.yaml  lidar_fusion.param.yaml
rosbag_ws/src/lidar_components/cloud_transform/launch/: cloud_transform.launch.py
rosbag_ws/src/lidar_components/cloud_transform/src/: transformer_alt.cpp
